--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "firebase": "^5.11.1",
     "install": "^0.12.2",
     "npm": "^6.9.0",
     "react": "^16.8.6",
+    "react-canvas-draw": "^1.0.1-hotfix.4",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
   },
